--- a/app.css
+++ b/app.css
@@ -65,6 +65,13 @@ a:visited {
   display: none;
 }
 
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-bottom: 2em;
+}
+
 #leader-fact {
   font-size: xxx-large;
   max-width: 16em;
