--- a/app.css
+++ b/app.css
@@ -4,16 +4,29 @@ body {
   background: #fff;
   color: #333;
   margin-bottom: 2rem;
+  --control-padding: 8px;
 }
 
 .invisible {
   visibility: hidden;
 }
 
+.controls {
+  width: 80%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+#group-type-select {
+  max-width: 100%;
+  padding: var(--control-padding);
+}
+
 #status-message {
   background-color: hsla(53, 100%, 60%, 0.8);
-  margin: 1rem;
-  padding: 1rem;
+  margin-bottom: 1rem;
+  padding: var(--control-padding);
   border-radius: 0.25rem;
 }
 
@@ -26,7 +39,7 @@ button {
   font-size: 1.2em;
   font-weight: bold;
   cursor: pointer;
-  padding: 0.5em;
+  padding: var(--control-padding);
   border-radius: 0.5em;
   border-color: #333;
   border-style: solid;
@@ -54,7 +67,7 @@ a:visited {
   position: absolute;
   right: 1.5em;
   top: 1.5em;
-  font-size: 0.5em;
+  font-size: 0.5rem;
   color: #666;
 }
 
@@ -108,5 +121,9 @@ main {
   }
   #leader-fact {
     font-size: xx-large;
+  }
+
+  #group-image {
+    max-width: 80%;
   }
 }
